# Software

catkin_ws/src/20-indefinite-navigation/stop_line_filter/src/: stop_line_filter_node.py
catkin_ws/src/70-convenience-packages/duckietown_demos/launch/: lane_following.launch
catkin_ws/src/beginner_tutorials/: package.xml
catkin_ws/src/robotik/: CMakeLists.txt  package.xml
catkin_ws/src/robotik/launch/: indefinite_navigation.launch  lane_following.launch  robotik_all.launch
catkin_ws/src/robotik_virtual_joystick/: CMakeLists.txt  package.xml
catkin_ws/src/robotik_virtual_joystick/launch/: robotik2_virtual_joystick_gui.launch
catkin_ws/src/robotik_virtual_joystick/scripts/: robotik2_virtual_joystick_gui.py
catkin_ws/src/virtual_joystick/: CMakeLists.txt  package.xml
catkin_ws/src/virtual_joystick/launch/: robotik_virtual_joystick_gui.launch
catkin_ws/src/virtual_joystick/src/: robotik_virtual_joystick_gui.py
