<?xml version="1.0"?>
<package>
  <name>robotik</name>
  <version>1.0.0</version>
  <description>TODO: description of `duckietown_demos`</description>

  <maintainer email="paulje.badz@gmail.com">Paulje</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend> 
</package>
